# sonder

./: .gitignore  README.md  STACK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.acr/: capability.yaml  deep.md  index.txt  standard.md  summary.md
adapters/acr/: README.md  package.json
adapters/acr/src/: index.ts
adapters/adapter-crewai-py/: README.md  pyproject.toml
adapters/adapter-crewai-py/examples/: maintenance_crew.py
adapters/adapter-crewai-py/src/sonder_crewai/: __init__.py  audit.py  event.py  middleware.py  wrapper.py
adapters/adapter-crewai-py/tests/: test_sonder_crewai.py
adapters/awm/: README.md  package.json
adapters/awm/src/: index.ts
adapters/engram/: README.md  package.json
adapters/engram/src/: index.ts
adapters/lattice/: README.md  package.json
adapters/lattice/src/: index.ts
adapters/lewm/: README.md  package.json
adapters/lewm/src/: index.ts
adapters/parliament/: README.md  package.json
adapters/parliament/src/: index.ts
aop/schema/v0.1/: agent-observation-event.schema.json  agent_observation_event.proto
benchmarks/: package.json  results.json  tsconfig.json
benchmarks/src/: bench.ts
docs/: adapters.md  audit-log.md  getting-started.md  sonder-as-aop.md
docs/adr/: 0001-transport-out-of-scope.md
examples/parliament-engram-lattice/: package.json
examples/parliament-engram-lattice/src/: demo.ts
openspec/changes/add-merkle-audit-chain/: design.md  proposal.md  tasks.md
openspec/changes/sonder-agent-runtime/: .openspec.yaml  design.md  proposal.md  tasks.md
(+9 files in other folders)
