[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonder-crewai"
version = "0.1.0"
description = "Sonder cognitive event instrumentation for CrewAI workflows"
readme = "README.md"
keywords = ["sonder", "crewai", "ai-agents", "observability", "cognitive-runtime", "audit"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "python-ulid>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "crewai>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/heybeaux/sonder"
Repository = "https://github.com/heybeaux/sonder/tree/main/adapters/adapter-crewai-py"
Issues = "https://github.com/heybeaux/sonder/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonder_crewai"]
